# openapi-ui

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: actix.rs  axum.rs  generate_docs.rs  poem.rs  rocket.rs  salvo.rs  warp.rs
src/: error.rs  index.html  lib.rs  openapi.rs  sample_data.json  template.rs  theme.rs  ui.rs
